hphp/hack/test/typecheck/visibilities/method_shadow.php.exp
File "method_shadow.php", line 6, characters 16-18:
This object access to get is ambiguous (Typing[4256])
File "method_shadow.php", line 8, characters 20-22:
You will access the private instance declared in A
File "method_shadow.php", line 17, characters 19-21:
Instead of the public instance declared in B
File "method_shadow.php", line 6, characters 12-20:
Invalid return type (Typing[4110])
File "method_shadow.php", line 5, characters 32-37:
Expected string
File "method_shadow.php", line 8, characters 27-29:
But got int
